src/main.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Sevillana&display=swap');

* {
    font-family: "Montserrat", sans-serif;
}

#webpage {
    background-color: #181818;
}

#main-title {
    color: #E9EAE2;
    padding: 0;
    margin: 0;
}

#navbar-bg {
    background-color: transparent !important;
}

#navLink {
    color: #7B7A6F;
    font-weight: 700;
    letter-spacing: 0.5px;
    border: 1px solid transparent;
    border-radius: 3px;
}

#navLink:hover {
    transition: 0.2s;
    color: #E3E0D3;
    background-color: #1E1E1E;
    border: 2px solid #e3e0d37a;
}

#navLink.active {
    font-weight: 700;
    border: 2px solid #e3e0d37a;
    color: #E3E0D3;
    background-color: #1E1E1E;
}

#pageRow {
    min-height: 90vh;
}

#leftColumn {
    color: #E9EAE2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#slogan {
    font-size: 70px;
    font-weight: 900;
    color: #E3E0D3;
}

#skills {
    color: #7B7A6F;
    font-weight: 600;
    font-size: 40px;
}

#profileName {
    display: flex;
    align-items: center;
    color: #E3E0D3;
}

#profilePicture {
    width: 100%;
    border-radius: 35px;
    margin-bottom: 5px;
}

#columnBox {
    padding: 30px;
    height: 100%;
    border-radius: 25px;
}

#socialIcons {
    width: 20%;
    margin-right: 3px;
}

#socialIcons:hover {
    filter: brightness(200%);
}

#cvBtn {
    background-color: transparent;
    border: 3px solid #CCCABD;
    padding: 10px;
    font-size: 20px;
    font-weight: 700;
    letter-spacing: 1px;
    color: #CCCABD;
    margin-top: 10px;
    margin-bottom: 50px;
}

#cvBtn:hover {
    filter: brightness(200%);
    background-color: #1E1E1E;
    transition: 0.2s;
}

.footer {
    background-color: transparent;
    color: white;
    margin: 0;
    padding: 10px;
    font-size: 12px;
}

#projectCard {
    background-color: #E3E0D3;
    color: #1E1E1E;
    height: 70vh;
    text-align: center;
    margin: 10px;
    border: none;
}

#card-img-top {
    height: 30vh;
    background-position: center;
    background-size: cover;
}

#project-title {
    color: #706f65 !important;
    font-size: 25px;
    font-weight: 900;
    text-align: left;
    padding: 0;
}

#project-description {
    color: #706f65;
    text-align: left;
    font-weight: 500;
    font-size: 16px;
}

#projectBtn {
    background-color: #7B7A6F;
    border: none;
    padding: 10px;
    font-size: 20px;
    font-weight: 700;
    letter-spacing: 1px;
    color: #E3E0D3;
    margin-top: 10px;
    width: 40%;
    margin-right: 10px;
    margin-left: 10px;
}

#projectBtn:hover {
    filter: brightness(100%);
    background-color: #1E1E1E;
    transition: 0.2s;
}

#project-footer {
    background-color: #7b7a6fdc;
    color: #E3E0D3 !important;
    font-style: italic;
    min-height: 8vh;
}

#project-footer-text{
    font-weight: 300;
}

#aboutMe {
    color: #E3E0D3;
    font-weight: 700;
    font-size: 40px;
}

#paragraph {
    color: #CCCABD;
    font-weight: 600;
    font-size: 16px;
}

#aboutMePicture {
    width: 100%;
    border-radius: 5px;
    margin-bottom: 10px;
}

#doublePictureBox {
    display: flex;
    justify-content: space-between;
}

#aboutMeSubPicture {
    width: 49%;
    border-radius: 5px;
}

#aboutMeColumn {
    margin-bottom: 50px;
}

@media (max-width: 768px) {
    #slogan {
        font-size: 60px;
    }

    #skills {
        font-size: 30px;
    }

    #columnBox {
        padding: 0px;
    }
}

